--- a/docs-python.mdx
+++ b/docs-python.mdx
@@ -111,7 +111,7 @@ A table is uniquely identified by the combination of `db_root_id` and `table_see
 
 #### `code_in()`
 
-| **Parameters** | `connection`: Solana RPC AsyncClient<br/>`signer`: Keypair<br/>`data`: data to upload (str or list[str])<br/>`mode`: contract mode (default: 'anchor') |
+| **Parameters** | `connection`: Solana RPC AsyncClient<br/>`signer`: Keypair or WalletSigner<br/>`chunks`: data to upload (list[str])<br/>`filename`: optional filename (str or None)<br/>`method`: upload method (int, default: 0)<br/>`filetype`: file type hint (str, default: '')<br/>`on_progress`: optional progress callback (Callable[[int], None]) |
 |----------------|--------------------------|
 | **Returns** | Transaction signature (str) |
 
@@ -120,26 +120,27 @@ from iqlabs import writer
 from solana.rpc.async_api import AsyncClient
 from solders.keypair import Keypair
 
-# Upload a single file
-signature = await writer.code_in(connection, signer, 'Hello, blockchain!')
+# Upload data
+signature = await writer.code_in(connection, signer, ['Hello, blockchain!'])
 
-# Upload multiple files
-multi_sig = await writer.code_in(connection, signer, ['file1.txt', 'file2.txt', 'file3.txt'])
+# Upload with filename
+signature = await writer.code_in(connection, signer, ['file contents here'], filename='hello.txt')
 ```
 
 ---
 
 #### `read_code_in()`
 
-| **Parameters** | `tx_signature`: transaction signature (str)<br/>`connection`: (optional) AsyncClient |
+| **Parameters** | `tx_signature`: transaction signature (str)<br/>`speed`: rate limit profile (optional, str)<br/>`on_progress`: optional progress callback (Callable[[int], None]) |
 |----------------|--------------------------|
-| **Returns** | Stored data (str) |
+| **Returns** | dict with `metadata` (str) and `data` (str or None) |
 
 ```python
 from iqlabs import reader
 
-data = await reader.read_code_in('5Xg7...', connection)
-print(data)  # 'Hello, blockchain!'
+result = await reader.read_code_in('5Xg7...')
+print(result['data'])      # 'Hello, blockchain!'
+print(result['metadata'])  # JSON string with file metadata
 ```
 
 ---
@@ -148,13 +149,12 @@ print(data)  # 'Hello, blockchain!'
 
 #### `request_connection()`
 
-| **Parameters** | `connection`: AsyncClient<br/>`signer`: Keypair<br/>`db_root_id`: database ID<br/>`party_a`, `party_b`: the two users to connect<br/>`table_name`: connection table name<br/>`columns`: column list<br/>`id_col`: ID column<br/>`ext_keys`: extension keys |
+| **Parameters** | `connection`: AsyncClient<br/>`signer`: Keypair<br/>`db_root_id`: database ID (bytes or str)<br/>`party_a`: first user pubkey (str)<br/>`party_b`: second user pubkey (str)<br/>`table_name`: connection table name (str or bytes)<br/>`columns`: column list (list[str or bytes])<br/>`id_col`: ID column (str or bytes)<br/>`ext_keys`: extension keys (list[str or bytes]) |
 |----------------|--------------------------|
 | **Returns** | Transaction signature (str) |
 
 ```python
 from iqlabs import writer
-from solders.pubkey import Pubkey
 
 await writer.request_connection(
     connection, signer, 'my-db',
@@ -167,26 +167,32 @@ await writer.request_connection(
 
 #### `manage_connection()`
 
+<Note>
+There is no high-level SDK wrapper for this function. Use the contract-level instruction builder directly.
+</Note>
+
 | **Parameters** | `builder`: InstructionBuilder<br/>`accounts`: dict with `db_root`, `connection_table`, `signer`<br/>`args`: dict with `db_root_id`, `connection_seed`, `new_status` |
 |----------------|--------------------------|
-| **Returns** | TransactionInstruction |
+| **Returns** | Instruction |
 
 ```python
 from iqlabs import contract
-from iqlabs.contract.constants import CONNECTION_STATUS_APPROVED, CONNECTION_STATUS_BLOCKED
+
+# Create an instruction builder
+builder = contract.create_instruction_builder(contract.get_program_id())
 
 # Approve a friend request
 approve_ix = contract.manage_connection_instruction(
     builder,
     {"db_root": db_root, "connection_table": connection_table, "signer": my_pubkey},
-    {"db_root_id": db_root_id, "connection_seed": connection_seed, "new_status": CONNECTION_STATUS_APPROVED}
+    {"db_root_id": db_root_id, "connection_seed": connection_seed, "new_status": contract.CONNECTION_STATUS_APPROVED}
 )
 
 # Block a user
 block_ix = contract.manage_connection_instruction(
     builder,
     {"db_root": db_root, "connection_table": connection_table, "signer": my_pubkey},
-    {"db_root_id": db_root_id, "connection_seed": connection_seed, "new_status": CONNECTION_STATUS_BLOCKED}
+    {"db_root_id": db_root_id, "connection_seed": connection_seed, "new_status": contract.CONNECTION_STATUS_BLOCKED}
 )
 ```
 
@@ -194,14 +200,14 @@ block_ix = contract.manage_connection_instruction(
 
 #### `read_connection()`
 
-| **Parameters** | `db_root_id`: database ID<br/>`wallet_a`, `wallet_b`: the two wallets to check |
+| **Parameters** | `db_root_id`: database ID (bytes or str)<br/>`party_a`: first wallet (str)<br/>`party_b`: second wallet (str) |
 |----------------|--------------------------|
 | **Returns** | dict with `status`, `requester`, `blocker` |
 
 ```python
 from iqlabs import reader
 
-conn_info = await reader.read_connection('my-db', wallet_a, wallet_b)
+conn_info = await reader.read_connection('my-db', party_a, party_b)
 print(conn_info['status'])  # 'pending' | 'approved' | 'blocked'
 ```
 
@@ -209,7 +215,7 @@ print(conn_info['status'])  # 'pending' | 'approved' | 'blocked'
 
 #### `write_connection_row()`
 
-| **Parameters** | `connection`: AsyncClient<br/>`signer`: Keypair<br/>`db_root_id`: database ID<br/>`connection_seed`: connection seed<br/>`row_json`: JSON data (str) |
+| **Parameters** | `connection`: AsyncClient<br/>`signer`: Keypair<br/>`db_root_id`: database ID (bytes or str)<br/>`connection_seed`: connection seed (bytes or str)<br/>`row_json`: JSON data (str) |
 |----------------|--------------------------|
 | **Returns** | Transaction signature (str) |
 
@@ -229,23 +235,19 @@ await writer.write_connection_row(
 
 Fetch all connections (friend requests) for a user by analyzing their UserState PDA transaction history. Each connection includes its `db_root_id`, identifying which app the connection belongs to.
 
-| **Parameters** | `user_pubkey`: user public key (str or Pubkey)<br/>`options`: optional settings dict |
+| **Parameters** | `user_pubkey`: user public key (str or Pubkey)<br/>`limit`: max number of transactions to fetch (optional)<br/>`before`: signature to paginate from (optional)<br/>`speed`: rate limit profile (optional) |
 |----------------|--------------------------|
-| **Options** | `limit`: max number of transactions to fetch<br/>`before`: signature to paginate from<br/>`speed`: rate limit profile ('light', 'medium', 'heavy', 'extreme')<br/>`mode`: contract mode (optional) |
-| **Returns** | List of connection dicts with db_root_id, party_a, party_b, status, requester, blocker, timestamp |
+| **Returns** | List of connection dicts with db_root_id, connection_pda, party_a, party_b, status, requester, blocker, timestamp |
 
 ```python
 from iqlabs import reader
 
 # Fetch all connections (across all apps!)
-connections = await reader.fetch_user_connections(my_pubkey, {
-    "speed": "light",  # 6 RPS (default)
-    "limit": 100
-})
-
-# Filter by app
-solchat_connections = [c for c in connections if c['db_root_id'] == 'solchat']
-zo_connections = [c for c in connections if c['db_root_id'] == 'zo-trading']
+connections = await reader.fetch_user_connections(
+    my_pubkey,
+    speed="light",
+    limit=100
+)
 
 # Filter by status
 pending_requests = [c for c in connections if c['status'] == 'pending']
@@ -254,7 +256,7 @@ blocked = [c for c in connections if c['status'] == 'blocked']
 
 # Check connection details
 for conn in connections:
-    print(f"App: {conn['db_root_id']}, {conn['party_a']} <-> {conn['party_b']}, status: {conn['status']}")
+    print(f"Party A: {conn['party_a']} <-> Party B: {conn['party_b']}, status: {conn['status']}")
 ```
 
 ---
@@ -263,7 +265,7 @@ for conn in connections:
 
 #### `write_row()`
 
-| **Parameters** | `connection`: AsyncClient<br/>`signer`: Keypair<br/>`db_root_id`: database ID<br/>`table_seed`: table name<br/>`row_json`: JSON row data (str) |
+| **Parameters** | `connection`: AsyncClient<br/>`signer`: Keypair<br/>`db_root_id`: database ID (bytes or str)<br/>`table_seed`: table name (bytes or str)<br/>`row_json`: JSON row data (str)<br/>`skip_confirmation`: skip tx confirmation (default: False) |
 |----------------|--------------------------|
 | **Returns** | Transaction signature (str) |
 
@@ -286,77 +288,47 @@ await writer.write_row(connection, signer, 'my-db', 'users', json.dumps({
 
 #### `read_table_rows()`
 
-| **Parameters** | `account`: table PDA (Pubkey or str)<br/>`options`: optional settings dict |
+| **Parameters** | `account`: table PDA (Pubkey or str)<br/>`before`: signature cursor for pagination (optional)<br/>`limit`: max number of rows to fetch (optional)<br/>`speed`: rate limit profile (optional) |
 |----------------|--------------------------|
-| **Options** | `limit`: max number of rows to fetch<br/>`before`: signature cursor for pagination<br/>`signatures`: pre-collected signature list (skips RPC fetch if provided)<br/>`speed`: rate limit profile ('light', 'medium', 'heavy', 'extreme') |
 | **Returns** | `list[dict]` |
 
 ```python
 from iqlabs import reader
 
 # Basic usage
-rows = await reader.read_table_rows(table_pda, {"limit": 50})
+rows = await reader.read_table_rows(table_pda, limit=50)
 
 # Cursor-based pagination
-older_rows = await reader.read_table_rows(table_pda, {"limit": 50, "before": "sig..."})
-
-# With pre-collected signatures (skips signature fetching, decodes directly)
-sigs = await reader.collect_signatures(table_pda)
-target_idx = sigs.index('abc123')
-slice_sigs = sigs[target_idx - 25:target_idx + 25]
-rows = await reader.read_table_rows(table_pda, {"signatures": slice_sigs})
-```
-
----
-
-#### `collect_signatures()`
-
-Collects all (or up to `max_signatures`) transaction signatures for an account. Lightweight — no transaction decoding, only signature strings. Useful for pagination: fetch the full signature list once, then slice and pass to `read_table_rows()`.
-
-| **Parameters** | `account`: table PDA (Pubkey or str)<br/>`max_signatures`: max number of signatures to collect (optional, fetches all if omitted) |
-|----------------|--------------------------|
-| **Returns** | `list[str]` (signature strings) |
-
-```python
-from iqlabs import reader
-
-# Collect all signatures
-all_sigs = await reader.collect_signatures(table_pda)
-
-# Collect up to 3000 signatures
-sigs = await reader.collect_signatures(table_pda, 3000)
-
-# Use with read_table_rows to read from the middle
-target_idx = sigs.index('abc123')
-chunk = sigs[target_idx - 25:target_idx + 25]
-rows = await reader.read_table_rows(table_pda, {"signatures": chunk})
+older_rows = await reader.read_table_rows(table_pda, limit=50, before="sig...")
 ```
 
 ---
 
 #### `get_tablelist_from_root()`
 
-| **Parameters** | `db_root_id`: database ID (str) |
+| **Parameters** | `connection`: AsyncClient<br/>`db_root_id`: database ID (bytes or str) |
 |----------------|--------------------------|
-| **Returns** | Table name list (list[str]) |
+| **Returns** | dict with `root_pda`, `creator`, `table_seeds`, `global_table_seeds` |
 
 ```python
 from iqlabs import reader
 
-tables = await reader.get_tablelist_from_root('my-db')
-print('Table list:', tables)
+result = await reader.get_tablelist_from_root(connection, 'my-db')
+print('Creator:', result['creator'])
+print('Table seeds:', result['table_seeds'])
 ```
 
 ---
 
 #### `fetch_inventory_transactions()`
 
-| **Parameters** | `user_pubkey`: user public key (Pubkey or str)<br/>`limit`: max count (optional) |
+| **Parameters** | `public_key`: user public key (Pubkey)<br/>`limit`: max count (int)<br/>`before`: pagination cursor (optional, str) |
 |----------------|--------------------------|
 | **Returns** | Transaction list |
 
 ```python
 from iqlabs import reader
+from solders.pubkey import Pubkey
 import json
 
 my_files = await reader.fetch_inventory_transactions(my_pubkey, 20)
@@ -402,21 +374,26 @@ These are low-level SDK functions. Not needed for typical usage, but useful when
 
 #### `manage_row_data()`
 
-Low-level function for managing row data in tables.
+Unified function that handles both table row writes and connection row writes. Auto-detects whether to write to a table or connection based on existing PDAs.
 
 | **Module** | `writer` |
 |------------|----------|
-| **Use Case** | Custom row management, batch operations |
+| **Parameters** | `connection`: AsyncClient<br/>`signer`: Keypair<br/>`db_root_id`: database ID (bytes or str)<br/>`seed`: table or connection seed (bytes or str)<br/>`row_json`: JSON row data (str)<br/>`table_name`: required for table edits (optional)<br/>`target_tx`: reference tx for table edits (optional) |
+| **Returns** | Transaction signature (str) |
+| **Use Case** | Custom row management, updating existing rows |
 
 ```python
 from iqlabs import writer
+import json
 
-await writer.manage_row_data(connection, signer, {
-    "db_root_id": 'my-db',
-    "table_seed": 'users',
-    "operation": 'update',
-    "row_data": json.dumps({"id": 1, "name": "Updated Name"})
-})
+await writer.manage_row_data(
+    connection, signer,
+    'my-db',       # db_root_id
+    'users',       # seed (table seed)
+    json.dumps({"id": 1, "name": "Updated Name"}),
+    table_name='users',
+    target_tx=original_tx_sig
+)
 ```
 
 ---
@@ -429,50 +406,78 @@ Reads the UserState PDA for a given user.
 
 | **Module** | `reader` |
 |------------|----------|
+| **Parameters** | `user_pubkey`: user public key (str) |
+| **Returns** | dict with `owner`, `metadata`, `total_session_files`, `profile_data` |
 | **Use Case** | Fetching user profile data, checking upload counts |
 
 ```python
 from iqlabs import reader
 
 user_state = await reader.read_user_state(user_pubkey)
-print('Profile:', user_state['profile'])
-print('Upload count:', user_state['file_count'])
+print('Owner:', user_state['owner'])
+print('Session files:', user_state['total_session_files'])
+print('Profile data:', user_state['profile_data'])
 ```
 
 ---
 
 #### `read_inventory_metadata()`
 
-Reads metadata associated with a user's inventory (uploaded files).
+Reads metadata associated with a user's inventory transaction.
 
 | **Module** | `reader` |
 |------------|----------|
-| **Use Case** | Listing user files with metadata, file management |
+| **Parameters** | `tx_signature`: transaction signature (str) |
+| **Returns** | dict with metadata |
+| **Use Case** | Extracting file metadata from inventory transactions |
 
 ```python
 from iqlabs import reader
 
-metadata = await reader.read_inventory_metadata(user_pubkey)
-for item in metadata:
-    print(f"File: {item['name']}, Size: {item['size']}, Signature: {item['signature']}")
+result = await reader.read_inventory_metadata(tx_signature)
+print('Metadata:', result)
 ```
 
 ---
 
 #### `get_session_pda_list()`
 
-Retrieves a list of session PDAs.
+Retrieves a list of session PDA addresses for a user.
 
 | **Module** | `reader` |
 |------------|----------|
+| **Parameters** | `user_pubkey`: user public key (str) |
+| **Returns** | `list[str]` (session PDA base58 strings) |
 | **Use Case** | Session management, active session tracking |
 
 ```python
 from iqlabs import reader
 
 sessions = await reader.get_session_pda_list(user_pubkey)
-for session in sessions:
-    print(f"Session PDA: {session['pda']}, Active: {session['is_active']}")
+for pda in sessions:
+    print(f"Session PDA: {pda}")
+```
+
+---
+
+#### Contract PDA Functions
+
+Low-level PDA derivation functions available in the `contract` module.
+
+| **Module** | `contract` |
+|------------|----------|
+| **Use Case** | Custom PDA derivation, account lookups |
+
+```python
+from iqlabs import contract
+from solders.pubkey import Pubkey
+
+program_id = contract.get_program_id()
+db_root_pda = contract.get_db_root_pda(db_root_id, program_id)
+table_pda = contract.get_table_pda(db_root_pda, table_seed, program_id)
+user_pda = contract.get_user_pda(user_pubkey, program_id)
+session_pda = contract.get_session_pda(user_pubkey, seq=0, program_id=program_id)
+connection_pda = contract.get_connection_table_pda(db_root_pda, connection_seed, program_id)
 ```
 
 ---
@@ -481,10 +486,12 @@ for session in sessions:
 
 #### `derive_dm_seed()`
 
-Derives a deterministic seed for direct messaging (DM) between two users.
+Derives a deterministic seed for direct messaging (DM) between two users. Sorts the two pubkeys alphabetically and hashes `"lower:upper"` with Keccak-256.
 
-| **Module** | `utils` / `reader` |
+| **Module** | `utils` |
 |------------|----------|
+| **Parameters** | `user_a`: first user pubkey (str)<br/>`user_b`: second user pubkey (str) |
+| **Returns** | bytes (32-byte seed) |
 | **Use Case** | Creating consistent connection identifiers, DM channel setup |
 
 ```python
@@ -492,17 +499,19 @@ from iqlabs.sdk.utils.seed import derive_dm_seed
 
 seed1 = derive_dm_seed(wallet_a, wallet_b)
 seed2 = derive_dm_seed(wallet_b, wallet_a)
-print(seed1 == seed2)  # True
+print(seed1 == seed2)  # True — order doesn't matter
 ```
 
 ---
 
 #### `to_seed_bytes()`
 
-Converts a string seed to the byte format required for PDA derivation.
+Converts a seed identifier to bytes. If the input is a 64-character hex string, it passes through as-is. Otherwise, it applies Keccak-256 hash.
 
 | **Module** | `utils` |
 |------------|----------|
+| **Parameters** | `value`: seed string or bytes |
+| **Returns** | bytes |
 | **Use Case** | Custom PDA derivation, low-level seed manipulation |
 
 ```python
