--- a/ko/docs-typescript.mdx
+++ b/ko/docs-typescript.mdx
@@ -19,7 +19,7 @@ npm i @iqlabs-official/solana-sdk
 
 IQLabs SDK를 사용하기 전에 알아야 할 주요 개념들입니다.
 
-![Iqiqiq](/images/iqiqiq.png)
+---
 
 ### 데이터 저장 (Code In)
 
@@ -111,33 +111,41 @@ IQLabs SDK를 사용하기 전에 알아야 할 주요 개념들입니다.
 
 #### `codeIn()`
 
-| **파라미터** | `connection`: Solana RPC 연결<br/>`signer`: 서명 지갑<br/>`data`: 업로드할 데이터 (단일 문자열 또는 배열)<br/>`mode`: 컨트랙트 모드 (기본값: 'anchor') |
+| **파라미터** | `input`: `{ connection, signer }` 객체<br/>`data`: 업로드할 데이터 (string 또는 string[])<br/>`filename`: 파일 이름 (선택, string)<br/>`method`: 업로드 방식 (number, 기본값: 0)<br/>`filetype`: 파일 유형 힌트 (string, 기본값: '')<br/>`onProgress`: 진행률 콜백 (선택) `(percent: number) => void` |
 |-------------|--------------------------|
 | **반환값** | 트랜잭션 서명 (string) |
 
 ```typescript
-import { codeIn } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
-// 단일 파일 업로드
-const signature = await codeIn(connection, signer, 'Hello, blockchain!');
+// 데이터 업로드
+const signature = await iqlabs.writer.codeIn(
+  { connection, signer },
+  'Hello, blockchain!'
+);
 
-// 여러 파일 업로드
-const multiSig = await codeIn(connection, signer, ['file1.txt', 'file2.txt', 'file3.txt']);
+// 파일 이름과 함께 업로드
+const sig = await iqlabs.writer.codeIn(
+  { connection, signer },
+  'file contents here',
+  'hello.txt'
+);
 ```
 
 ---
 
 #### `readCodeIn()`
 
-| **파라미터** | `txSignature`: 트랜잭션 서명<br/>`connection`: (선택) Solana RPC 연결 |
+| **파라미터** | `txSignature`: 트랜잭션 서명 (string)<br/>`speed`: 속도 제한 프로필 (선택, 'light' \| 'medium' \| 'heavy' \| 'extreme')<br/>`onProgress`: 진행률 콜백 (선택) `(percent: number) => void` |
 |-------------|--------------------------|
-| **반환값** | 저장된 데이터 (string) |
+| **반환값** | `{ metadata: string, data: string \| null }` |
 
 ```typescript
-import { readCodeIn } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
-const data = await readCodeIn('5Xg7...', connection);
-console.log(data); // 'Hello, blockchain!'
+const result = await iqlabs.reader.readCodeIn('5Xg7...');
+console.log(result.data);      // 'Hello, blockchain!'
+console.log(result.metadata);  // 파일 메타데이터가 포함된 JSON 문자열
 ```
 
 ---
@@ -146,14 +154,14 @@ console.log(data); // 'Hello, blockchain!'
 
 #### `requestConnection()`
 
-| **파라미터** | `connection`: Solana RPC 연결<br/>`signer`: 서명 지갑<br/>`dbRootId`: 데이터베이스 ID<br/>`partyA`, `partyB`: 연결할 두 사용자<br/>`tableName`: 연결 테이블 이름<br/>`columns`: 컬럼 목록<br/>`idCol`: ID 컬럼<br/>`extKeys`: 확장 키 |
+| **파라미터** | `connection`: Solana RPC 연결<br/>`signer`: 서명 지갑<br/>`dbRootId`: 데이터베이스 ID (Uint8Array 또는 string)<br/>`partyA`: 첫 번째 사용자 공개키 (string)<br/>`partyB`: 두 번째 사용자 공개키 (string)<br/>`tableName`: 연결 테이블 이름 (string 또는 Uint8Array)<br/>`columns`: 컬럼 목록 (Array\<string \| Uint8Array\>)<br/>`idCol`: ID 컬럼 (string 또는 Uint8Array)<br/>`extKeys`: 확장 키 (Array\<string \| Uint8Array\>) |
 |-------------|--------------------------|
 | **반환값** | 트랜잭션 서명 (string) |
 
 ```typescript
-import { requestConnection } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
-await requestConnection(
+await iqlabs.writer.requestConnection(
   connection, signer, 'my-db',
   myWalletAddress, friendWalletAddress,
   'dm_table', ['message', 'timestamp'], 'message_id', []
@@ -164,25 +172,31 @@ await requestConnection(
 
 #### `manageConnection()`
 
-| **파라미터** | `builder`: InstructionBuilder<br/>`accounts`: `{ db_root, connection_table, signer }`<br/>`args`: `{ db_root_id, connection_seed, new_status }` |
+<Note>
+이 함수에 대한 고수준 SDK 래퍼가 없습니다. 컨트랙트 수준의 인스트럭션 빌더를 직접 사용하세요.
+</Note>
+
+| **파라미터** | `builder`: InstructionBuilder<br/>`accounts`: `{ db_root, connection_table, signer }` (PublicKey)<br/>`args`: `{ db_root_id, connection_seed, new_status }` |
 |-------------|--------------------------|
 | **반환값** | TransactionInstruction |
 
 ```typescript
-import { contract } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
+
+const builder = iqlabs.contract.createInstructionBuilder(iqlabs.contract.PROGRAM_ID);
 
 // 친구 요청 승인
-const approveIx = contract.manageConnectionInstruction(
+const approveIx = iqlabs.contract.manageConnectionInstruction(
   builder,
   { db_root, connection_table, signer: myPubkey },
-  { db_root_id, connection_seed, new_status: contract.CONNECTION_STATUS_APPROVED }
+  { db_root_id, connection_seed, new_status: iqlabs.contract.CONNECTION_STATUS_APPROVED }
 );
 
 // 사용자 차단
-const blockIx = contract.manageConnectionInstruction(
+const blockIx = iqlabs.contract.manageConnectionInstruction(
   builder,
   { db_root, connection_table, signer: myPubkey },
-  { db_root_id, connection_seed, new_status: contract.CONNECTION_STATUS_BLOCKED }
+  { db_root_id, connection_seed, new_status: iqlabs.contract.CONNECTION_STATUS_BLOCKED }
 );
 ```
 
@@ -190,14 +204,14 @@ const blockIx = contract.manageConnectionInstruction(
 
 #### `readConnection()`
 
-| **파라미터** | `dbRootId`: 데이터베이스 ID<br/>`walletA`, `walletB`: 확인할 두 지갑 |
+| **파라미터** | `dbRootId`: 데이터베이스 ID (Uint8Array 또는 string)<br/>`partyA`: 첫 번째 지갑 (string)<br/>`partyB`: 두 번째 지갑 (string) |
 |-------------|--------------------------|
-| **반환값** | `{ status: 'pending' \| 'approved' \| 'blocked', requester, blocker }` |
+| **반환값** | `{ status: 'pending' \| 'approved' \| 'blocked' \| 'unknown', requester: 'a' \| 'b', blocker: 'a' \| 'b' \| 'none' }` |
 
 ```typescript
-import { readConnection } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
-const { status, requester, blocker } = await readConnection('my-db', walletA, walletB);
+const { status, requester, blocker } = await iqlabs.reader.readConnection('my-db', partyA, partyB);
 console.log(status); // 'pending' | 'approved' | 'blocked'
 ```
 
@@ -205,14 +219,14 @@ console.log(status); // 'pending' | 'approved' | 'blocked'
 
 #### `writeConnectionRow()`
 
-| **파라미터** | `connection`: Solana RPC 연결<br/>`signer`: 서명 지갑<br/>`dbRootId`: 데이터베이스 ID<br/>`connectionSeed`: 연결 시드<br/>`rowJson`: JSON 데이터 |
+| **파라미터** | `connection`: Solana RPC 연결<br/>`signer`: 서명 지갑<br/>`dbRootId`: 데이터베이스 ID (Uint8Array 또는 string)<br/>`connectionSeed`: 연결 시드 (Uint8Array 또는 string)<br/>`rowJson`: JSON 데이터 (string) |
 |-------------|--------------------------|
 | **반환값** | 트랜잭션 서명 (string) |
 
 ```typescript
-import { writeConnectionRow } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
-await writeConnectionRow(
+await iqlabs.writer.writeConnectionRow(
   connection, signer, 'my-db', connectionSeed,
   JSON.stringify({ message_id: '123', message: '안녕 친구야!', timestamp: Date.now() })
 );
@@ -226,22 +240,16 @@ await writeConnectionRow(
 
 | **파라미터** | `userPubkey`: 사용자 공개키 (string 또는 PublicKey)<br/>`options`: 선택적 설정 |
 |-------------|--------------------------|
-| **옵션** | `limit`: 조회할 최대 트랜잭션 수<br/>`before`: 페이지네이션용 서명<br/>`speed`: 속도 제한 프로필 ('light', 'medium', 'heavy', 'extreme')<br/>`mode`: 컨트랙트 모드 (선택) |
-| **반환값** | dbRootId, partyA, partyB, status, requester, blocker, timestamp를 포함한 연결 객체 배열 |
+| **옵션** | `limit`: 조회할 최대 트랜잭션 수<br/>`before`: 페이지네이션용 서명<br/>`speed`: 속도 제한 프로필 ('light' \| 'medium' \| 'heavy' \| 'extreme') |
+| **반환값** | `{ dbRootId, connectionPda, partyA, partyB, status, requester, blocker, timestamp }` 객체 배열 |
 
 ```typescript
 import iqlabs from '@iqlabs-official/solana-sdk';
-const { fetchUserConnections } = iqlabs.reader;
 
-// 모든 연결 조회 (모든 앱에서!)
-const connections = await fetchUserConnections(myPubkey, {
-  speed: 'light',  // 6 RPS (기본값)
+const connections = await iqlabs.reader.fetchUserConnections(myPubkey, {
+  speed: 'light',
   limit: 100
 });
-
-// 앱별 필터링
-const solchatConnections = connections.filter(c => c.dbRootId === 'solchat');
-const zoConnections = connections.filter(c => c.dbRootId === 'zo-trading');
 
 // 상태별 필터링
 const pendingRequests = connections.filter(c => c.status === 'pending');
@@ -250,7 +258,7 @@ const blocked = connections.filter(c => c.status === 'blocked');
 
 // 연결 상세 확인
 connections.forEach(conn => {
-  console.log(`앱: ${conn.dbRootId}, ${conn.partyA} <-> ${conn.partyB}, 상태: ${conn.status}`);
+  console.log(`${conn.partyA} <-> ${conn.partyB}, 상태: ${conn.status}`);
 });
 ```
 
@@ -260,20 +268,20 @@ connections.forEach(conn => {
 
 #### `writeRow()`
 
-| **파라미터** | `connection`: Solana RPC 연결<br/>`signer`: 서명 지갑<br/>`dbRootId`: 데이터베이스 ID<br/>`tableSeed`: 테이블 이름<br/>`rowJson`: JSON 행 데이터 |
+| **파라미터** | `connection`: Solana RPC 연결<br/>`signer`: 서명 지갑<br/>`dbRootId`: 데이터베이스 ID (Uint8Array 또는 string)<br/>`tableSeed`: 테이블 이름 (Uint8Array 또는 string)<br/>`rowJson`: JSON 행 데이터 (string)<br/>`skipConfirmation`: 트랜잭션 확인 생략 (boolean, 기본값: false) |
 |-------------|--------------------------|
 | **반환값** | 트랜잭션 서명 (string) |
 
 ```typescript
-import { writeRow } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
 // 첫 번째 행을 작성하여 테이블 생성
-await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
+await iqlabs.writer.writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
   id: 1, name: 'Alice', email: 'alice@example.com'
 }));
 
 // 같은 테이블에 다른 행 추가
-await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
+await iqlabs.writer.writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
   id: 2, name: 'Bob', email: 'bob@example.com'
 }));
 ```
@@ -332,29 +340,30 @@ const rows = await iqlabs.reader.readTableRows(tablePda, { signatures: chunk });
 
 #### `getTablelistFromRoot()`
 
-| **파라미터** | `dbRootId`: 데이터베이스 ID |
+| **파라미터** | `connection`: Solana RPC 연결<br/>`dbRootId`: 데이터베이스 ID (Uint8Array 또는 string) |
 |-------------|--------------------------|
-| **반환값** | 테이블 이름 배열 (string[]) |
+| **반환값** | `{ rootPda: PublicKey, creator: string \| null, tableSeeds: string[], globalTableSeeds: string[] }` |
 
 ```typescript
-import { getTablelistFromRoot } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
-const tables = await getTablelistFromRoot('my-db');
-console.log('테이블 목록:', tables);
+const result = await iqlabs.reader.getTablelistFromRoot(connection, 'my-db');
+console.log('생성자:', result.creator);
+console.log('테이블 시드:', result.tableSeeds);
 ```
 
 ---
 
 #### `fetchInventoryTransactions()`
 
-| **파라미터** | `userPubkey`: 사용자 공개키<br/>`limit`: 최대 개수 (선택) |
+| **파라미터** | `publicKey`: 사용자 공개키 (PublicKey)<br/>`limit`: 최대 개수 (number)<br/>`before`: 페이지네이션 커서 (선택, string) |
 |-------------|--------------------------|
 | **반환값** | 트랜잭션 배열 |
 
 ```typescript
-import { fetchInventoryTransactions } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
-const myFiles = await fetchInventoryTransactions(myPubkey, 20);
+const myFiles = await iqlabs.reader.fetchInventoryTransactions(myPubkey, 20);
 myFiles.forEach(tx => {
   let metadata: { data?: unknown } | null = null;
   try {
@@ -380,14 +389,14 @@ myFiles.forEach(tx => {
 
 #### `setRpcUrl()`
 
-| **파라미터** | `url`: Solana RPC URL |
+| **파라미터** | `url`: Solana RPC URL (string) |
 |-------------|--------------------------|
 | **반환값** | 없음 (void) |
 
 ```typescript
-import { setRpcUrl } from '@iqlabs-official/solana-sdk';
+import iqlabs from '@iqlabs-official/solana-sdk';
 
-setRpcUrl('https://your-rpc.example.com');
+iqlabs.utils.setRpcUrl('https://your-rpc.example.com');
 ```
 
 ---
@@ -402,22 +411,25 @@ setRpcUrl('https://your-rpc.example.com');
 
 #### `manageRowData()`
 
-테이블의 행 데이터를 관리하는 저수준 함수입니다.
+테이블 행 쓰기와 연결 행 쓰기를 모두 처리하는 통합 함수입니다. 기존 PDA를 기반으로 테이블에 쓸지 연결에 쓸지 자동으로 감지합니다.
 
 | **모듈** | `writer` |
 |----------|----------|
-| **사용 사례** | 커스텀 행 관리, 배치 작업 |
+| **파라미터** | `connection`: Solana RPC 연결<br/>`signer`: 서명 지갑<br/>`dbRootId`: 데이터베이스 ID (Uint8Array 또는 string)<br/>`seed`: 테이블 또는 연결 시드 (Uint8Array 또는 string)<br/>`rowJson`: JSON 행 데이터 (string)<br/>`tableName`: 테이블 수정 시 필요 (선택, string 또는 Uint8Array)<br/>`targetTx`: 테이블 수정 시 참조 트랜잭션 (선택, string 또는 Uint8Array) |
+| **반환값** | 트랜잭션 서명 (string) |
+| **사용 사례** | 커스텀 행 관리, 기존 행 업데이트 |
 
 ```typescript
 import iqlabs from '@iqlabs-official/solana-sdk';
-const { manageRowData } = iqlabs.writer;
 
-await manageRowData(connection, signer, {
-  dbRootId: 'my-db',
-  tableSeed: 'users',
-  operation: 'update',
-  rowData: JSON.stringify({ id: 1, name: '업데이트된 이름' })
-});
+await iqlabs.writer.manageRowData(
+  connection, signer,
+  'my-db',       // dbRootId
+  'users',       // seed (테이블 시드)
+  JSON.stringify({ id: 1, name: '업데이트된 이름' }),
+  'users',       // tableName
+  originalTxSig  // targetTx
+);
 ```
 
 ---
@@ -430,54 +442,57 @@ await manageRowData(connection, signer, {
 
 | **모듈** | `reader` |
 |----------|----------|
+| **파라미터** | `userPubkey`: 사용자 공개키 (string) |
+| **반환값** | `{ owner: string, metadata: string \| null, totalSessionFiles: bigint, profileData?: string }` |
 | **사용 사례** | 사용자 프로필 데이터 조회, 업로드 수 확인 |
 
 ```typescript
 import iqlabs from '@iqlabs-official/solana-sdk';
-const { readUserState } = iqlabs.reader;
 
-const userState = await readUserState(userPubkey);
-console.log('프로필:', userState.profile);
-console.log('업로드 수:', userState.fileCount);
+const userState = await iqlabs.reader.readUserState(userPubkey);
+console.log('소유자:', userState.owner);
+console.log('세션 파일:', userState.totalSessionFiles);
+console.log('프로필 데이터:', userState.profileData);
 ```
 
 ---
 
 #### `readInventoryMetadata()`
 
-사용자의 인벤토리(업로드된 파일)와 관련된 메타데이터를 읽습니다.
+사용자의 인벤토리 트랜잭션과 관련된 메타데이터를 읽습니다.
 
 | **모듈** | `reader` |
 |----------|----------|
-| **사용 사례** | 메타데이터와 함께 사용자 파일 목록 조회, 파일 관리 |
+| **파라미터** | `txSignature`: 트랜잭션 서명 (string) |
+| **반환값** | `{ onChainPath: string, metadata: string }` |
+| **사용 사례** | 인벤토리 트랜잭션에서 파일 메타데이터 추출 |
 
 ```typescript
 import iqlabs from '@iqlabs-official/solana-sdk';
-const { readInventoryMetadata } = iqlabs.reader;
 
-const metadata = await readInventoryMetadata(userPubkey);
-metadata.forEach(item => {
-  console.log(`파일: ${item.name}, 크기: ${item.size}, 서명: ${item.signature}`);
-});
+const result = await iqlabs.reader.readInventoryMetadata(txSignature);
+console.log('경로:', result.onChainPath);
+console.log('메타데이터:', result.metadata);
 ```
 
 ---
 
 #### `getSessionPdaList()`
 
-세션 PDA 목록을 조회합니다.
+사용자의 세션 PDA 주소 목록을 조회합니다.
 
 | **모듈** | `reader` |
 |----------|----------|
+| **파라미터** | `userPubkey`: 사용자 공개키 (string) |
+| **반환값** | `string[]` (세션 PDA base58 문자열) |
 | **사용 사례** | 세션 관리, 활성 세션 추적 |
 
 ```typescript
 import iqlabs from '@iqlabs-official/solana-sdk';
-const { getSessionPdaList } = iqlabs.reader;
 
-const sessions = await getSessionPdaList(userPubkey);
-sessions.forEach(session => {
-  console.log(`세션 PDA: ${session.pda}, 활성: ${session.isActive}`);
+const sessions = await iqlabs.reader.getSessionPdaList(userPubkey);
+sessions.forEach(pda => {
+  console.log(`세션 PDA: ${pda}`);
 });
 ```
 
@@ -487,41 +502,42 @@ sessions.forEach(session => {
 
 #### `deriveDmSeed()`
 
-두 사용자 간의 다이렉트 메시지(DM)를 위한 결정적 시드를 생성합니다.
+두 사용자 간의 다이렉트 메시지(DM)를 위한 결정적 시드를 생성합니다. 두 공개키를 알파벳순으로 정렬한 후 keccak256으로 해싱합니다.
 
-| **모듈** | `utils` / `reader` |
+| **모듈** | `utils` |
 |----------|----------|
+| **파라미터** | `userA`: 첫 번째 사용자 공개키 (string)<br/>`userB`: 두 번째 사용자 공개키 (string) |
+| **반환값** | `Uint8Array` (시드 바이트) |
 | **사용 사례** | 일관된 연결 식별자 생성, DM 채널 설정 |
 
 ```typescript
 import iqlabs from '@iqlabs-official/solana-sdk';
-const { deriveDmSeed } = iqlabs.utils;
 
-const seed1 = deriveDmSeed(walletA, walletB);
-const seed2 = deriveDmSeed(walletB, walletA);
-console.log(seed1 === seed2); // true
+const seed1 = iqlabs.utils.deriveDmSeed(walletA, walletB);
+const seed2 = iqlabs.utils.deriveDmSeed(walletB, walletA);
+// seed1과 seed2는 동일합니다 — 순서는 상관없습니다
 ```
 
 ---
 
 #### `toSeedBytes()`
 
-문자열 시드를 PDA 도출에 필요한 바이트 형식으로 변환합니다.
+시드 식별자를 바이트로 변환합니다. 입력이 64자 16진수 문자열이면 16진수 바이트를 직접 반환합니다. 그렇지 않으면 keccak256 해시를 적용합니다.
 
 | **모듈** | `utils` |
 |----------|----------|
+| **파라미터** | `value`: 시드 문자열 또는 Uint8Array |
+| **반환값** | `Uint8Array` |
 | **사용 사례** | 커스텀 PDA 도출, 저수준 시드 조작 |
 
 ```typescript
 import iqlabs from '@iqlabs-official/solana-sdk';
-const { toSeedBytes } = iqlabs.utils;
 
 const seedString = 'my-custom-seed';
-const seedBytes = toSeedBytes(seedString);
+const seedBytes = iqlabs.utils.toSeedBytes(seedString);
 
 const [pda, bump] = PublicKey.findProgramAddressSync(
   [seedBytes, otherSeed],
   programId
 );
 ```
-
